<resources>
    <string name="app_name">Scanner</string>
    <string name="addNewItem">Thêm mặt hàng mới</string>
    <string name="itemName">Tên mặt hàng</string>
    <string name="itemPrice">Giá tiền:</string>
    <string name="itemCode">Mã vạch:</string>
    <string name="addItemBtn">Thêm</string>
    <string name="searchItems">Search...</string>
    <string name="itemNumber">Số lượng mặt hàng:</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="display_name">Tên hiển thị</string>
    <string name="create_account">Đăng kí</string>
    <string name="success">Hoàn thành</string>
</resources>