<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.scanner.ui.fragment.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/login"
            android:textSize="30sp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@={viewmodel.emailText}"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="25"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@={viewmodel.passwordText}"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/passEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="120dp"
            android:text="@string/login"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:enabled="@{!viewmodel.isLoggingIn()}"
            android:onClick="@{() -> viewmodel.loginPressed()}"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

